# SnackPilot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: app-ci.yml  core-test.yml  release.yml  security-audit.yml
docs/: index.html  parity-audit-2026-07-10.md  privacy.html
docs/architecture/: v2-architecture.md
docs/fixtures/gourmet/: login-success.html  (+1 more)
docs/plans/: 2026-02-24-location-notifications-design.md  2026-02-24-location-notifications.md  2026-02-24-new-menu-notifications-design.md  2026-02-24-new-menu-notifications.md  2026-02-24-winhttp-proxy-design.md  2026-02-24-winhttp-proxy-implementation.md  2026-02-25-daily-order-reminder-design.md  2026-02-25-daily-order-reminder.md
docs/requirements/: 00-overview.md  01-gourmet-scraping.md  02-ventopay-scraping.md  04-ui-ux.md  05-platform-services.md  06-testing.md  07-release.md  appendix-source-map.md
src/android/: .gitignore  README.md  bootstrap.sh  gradle.properties  keystore.properties.example  settings.gradle.kts
src/app/: app.json  jest.config.js  package-lock.json  package.json
src/core/: Cargo.toml  README.md  build.rs
src/core/scripts/: build-android-jni.sh  build-apple-xcframework.sh
src/core/src/: broadcast.rs  error.rs  ffi.rs  lib.rs
src/core/src/datetime/: formats.rs  mod.rs
src/core/src/demo/: data.rs  gourmet.rs  mod.rs  prng.rs  ventopay.rs
src/core/src/domain/: billing.rs  location.rs  menu.rs  mod.rs  order.rs  user.rs
src/core/src/features/: billing.rs  menus.rs  mod.rs  orders.rs
src/core/src/gourmet/: api.rs  client.rs  mod.rs  parser.rs  provider.rs
src/core/src/http/: cookie_jar.rs  fake.rs  mod.rs  reqwest_transport.rs
src/core/src/notify/: cancel_reminder.rs  daily_reminder.rs  fingerprint.rs  geofence.rs  log.rs  menu_check.rs  mod.rs
src/core/src/storage/: cache.rs  file_kv.rs  memory_kv.rs  mod.rs
src/core/src/ventopay/: api.rs  client.rs  mod.rs  parser.rs  provider.rs
src/core/tests/: wire_audit.rs
src/core/tests/fixtures/gourmet/: billing-last-month.json  login-failed.html  login-page.html  login-success.html  menus-page-0.html  menus-page-1.html  orders-page-edit-mode.html
src/core/tests/fixtures/ventopay/: login-success.html
src/desktop/: package-lock.json  package.json
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/.cargo/: audit.toml
src/desktop/src-tauri/src/: lib.rs  winhttp_client.rs
src/ios/: .gitignore  README.md  bootstrap.sh  project.yml
tools/devops/: README.md  android-keystore.sh  android-symbols.sh  archive-ios.sh  doctor.sh  lib.sh  run-android.sh  run-ios.sh  ship.sh  test-lib.sh
tools/icon-tools/: generate-icons.ts  package-lock.json  package.json  render-icons.ts
(+133 files in other folders)
