[package]
name = "snackpilot-core"
version = "2.0.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "snackpilot_core"
crate-type = ["lib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "multipart"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.9"
scraper = "0.20"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tempfile = "3"
