[package]
name = "snackpilot-core"
version = "2.0.4"
edition = "2021"
rust-version = "1.78"

[lib]
name = "snackpilot_core"
# lib for `cargo test`; cdylib/staticlib for the iOS/Android FFI artifacts (UniFFI).
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "multipart"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.9"
scraper = "0.20"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { version = "0.28", features = ["tokio", "cli"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tempfile = "3"

# Binding generator: `cargo run --bin uniffi-bindgen -- generate --library <dylib> --language swift|kotlin ...`
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
