[package]
name = "snack-pilot"
version = "1.3.18"
description = "Desktop client for company cafeteria menu ordering and billing"
edition = "2021"

[lib]
name = "snack_pilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
velopack = { version = "*", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "multipart", "rustls-tls-native-roots", "system-proxy", "blocking"], default-features = false }
tokio = { version = "1", features = ["sync"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Networking_WinHttp", "Win32_Foundation"] }
url = "2"
